<resources>
    <string name="app_name">g1-final</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="register_page">Register Page</string>
    <string name="login_page">Login Page</string>
    <string name="home_page">Home Page</string>
    <string name="faq_page">FAQ Page</string>
    <string name="about_page">About Page</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BiSafe</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_about">About</string>
    <string name="menu_crud">Edit Users (CRUD)</string>
</resources>