<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_crud"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/menu_crud" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />

    </group>
</menu>