<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.g1_final_project.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.g1_final_project.fragments.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.example.g1_final_project.fragments.FaqFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.g1_final_project.fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_crud"
        android:name="com.example.g1_final_project.fragments.EditUsersFragment"
        android:label="@string/menu_crud"
        tools:layout="@layout/fragment_edit_users" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.g1_final_project.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />




</navigation>